﻿IMPROVEMENTS / FIXES
- UI:
	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
- Detectors:
	- Display non-zero RCS <= 0.01m^2 as dBsm instead of square meters for more precision.

v1.9.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix potential stack overflow in cfg parsing of bullets, rockets, materials and mutators that can cause KSP to not load if BDBNIC is also installed.
- UI:
	- Added lead target indicator to bombing reticule.
	- Bomb aimer reticule now dynamically sized based on bomb yield.
	- Reloading BDA settings now reloads the spawn locations.cfg.
	- Temporarily show the mouse cursor by holding right shift (customizable).
- AI:
	- Add target priority debug info to the telemetry and AI debugging.
	- Tweak take-off climb rates slightly for smoother take-off.
	- Surface AI now able to (mostly) navigate around buildings at the KSC/Island Airfield/etc.
	- Re-add look-ahead check to Missile Launch authorization, AI now again checks if the target is predicted to still be within boresight 2s later, should cut down on incidents of missiles firing at bad angles the moment a target enters FOV.
	- Missiles set to not use DLZ launch ranges now still use min range turn radius kinematics check to see if a missile can plausibly physically maneuver to reach the target at shorter ranges for determining when the AI should launch.
	- AI beginning to lead target 2s before coming into gun range now properly takes relative closing velocity into account.
	- Bombing improvements:
		- Fix the requested extend distance prior to dropping bombs.
		- Fix AI not dropping bombs despite being on target.
		- Fix AI not properly leading moving targets when bombing with unguided bombs.
		- Add a "Bombing Altitude" slider and switch related fly-to instructions to use this when performing level bombing runs.