@@ -2,6 +2,8 @@
 - UI:
 	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
 	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
+- AI:
+	- Improvements to pilot follow mode to improve stability.
 - Detectors:
 	- Display non-zero RCS <= 0.01m^2 as dBsm instead of square meters for more precision.
 
